add /users/me/deposits api
